src/objects/c2g__codaCompany__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcompany</customHelpPage>
    <description>Stores the FinancialForce company details.</description>
    <fields>
        <fullName>BW_Billing_Name__c</fullName>
        <label>BW Billing Name</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <formula>c2g__BankAccount__r.c2g__AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <inlineHelpText>This is the company reference code.</inlineHelpText>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Form_Developer_Name__c</fullName>
        <description>Developer Name of the Document that contains Direct Debit form PDF.  It will be pushed into an quote related to the company.</description>
        <inlineHelpText>Developer Name of the Document that contains Direct Debit form PDF.  It will be pushed into an quote related to the company.</inlineHelpText>
        <label>Direct Debit Form Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>1</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bruntwood</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>Alderly Park</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Structure__c</fullName>
        <label>Funding Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APL</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>MTL</fullName>
                </value>
                <value>
                    <fullName>RB</fullName>
                </value>
                <value>
                    <fullName>Aviva</fullName>
                </value>
                <value>
                    <fullName>L&amp;G</fullName>
                </value>
                <value>
                    <fullName>Sci-Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name_With_No_Prefix__c</fullName>
        <formula>MID(Name, Find(&quot;-&quot;, Name) + 1,  LEN(Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name With No Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <label>RecordTypeDeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <formula>c2g__BankAccount__r.c2g__SortCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Dimension_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Dimension 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Dimension_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Dimension 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Dimension_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Dimension 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AddressIsValid__c</fullName>
        <formula>NOT
( ISBLANK(c2g__ShortStreet__c) &amp;&amp;
  ISBLANK(c2g__City__c) &amp;&amp; 
  ISBLANK(c2g__StateProvince__c) &amp;&amp;
  ISBLANK(c2g__ZipPostCode__c) &amp;&amp;
  ISBLANK(c2g__Country__c) 
) &amp;&amp; 
( c2g__ShortStreet__c  =  c2g__ValidatedStreet__c ) &amp;&amp;
( c2g__City__c =  c2g__ValidatedCity__c ) &amp;&amp;
( c2g__StateProvince__c =  c2g__ValidatedStateProvince__c ) &amp;&amp;  
( c2g__ZipPostCode__c =  c2g__ValidatedZipPostalCode__c ) &amp;&amp;
( c2g__Country__c =  c2g__ValidatedCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllocatedOwnership__c</fullName>
        <label>Allocated Ownership</label>
        <summarizedField>c2g__CompanyOwnership__c.c2g__PercentageOwnership__c</summarizedField>
        <summaryForeignKey>c2g__CompanyOwnership__c.c2g__Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Companies (Bank Account)</relationshipLabel>
        <relationshipName>CompaniesBankAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset1__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset2__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset3__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription1__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription2__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription3__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount1__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount2__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount3__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CashMatchingCurrencyMode__c</fullName>
        <label>Cash Matching Currency Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__City__c</fullName>
        <description>The city</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ContactEmail__c</fullName>
        <description>The contact email</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__Country__c</fullName>
        <description>The country</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerCurrencyWriteOffDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 1</description>
        <label>Currency Write-off Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesCWOD1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerCurrencyWriteOffDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 2</description>
        <label>Currency Write-off Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesCWOD2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerCurrencyWriteOffDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 3</description>
        <label>Currency Write-off Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesCWOD3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerCurrencyWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off)</relationshipLabel>
        <relationshipName>CompaniesCurrWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerSettlementDiscountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 1</description>
        <label>Settlement Discount Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerSettlementDiscountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 2</description>
        <label>Settlement Discount Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerSettlementDiscountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 3</description>
        <label>Settlement Discount Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerSettlementDiscount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount)</relationshipLabel>
        <relationshipName>CompaniesSettDisc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerWriteOffDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-Off Dimension1</description>
        <label>Write-off Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerWriteOffDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-off Dimension 2</description>
        <label>Write-off Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerWriteOffDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-off Dimension 3</description>
        <label>Write-off Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Write-off</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Write-off)</relationshipLabel>
        <relationshipName>CompaniesWriteOff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DisableRecurringInvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Opportunity Recurring Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ECCountryCode__c</fullName>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CY</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__EliminationCompany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elimination Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EnablePlaceOfSupplyRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Place of Supply Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ExternalTaxCalculation__c</fullName>
        <label>External Tax Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                    <label>Disabled</label>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Fax__c</fullName>
        <description>The fax</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LocalChartOfAccountsStructure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Chart of Accounts Structure</label>
        <referenceTo>c2g__ChartOfAccountsStructure__c</referenceTo>
        <relationshipLabel>Companies (Local Chart of Accounts Structure)</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LogoImage__c</fullName>
        <formula>IF(LEN(c2g__LogoURL__c)=0,&quot;&quot;, IMAGE(c2g__LogoURL__c,&quot;Company Logo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LogoURL__c</fullName>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OrgWideEffectiveDate__c</fullName>
        <label>Org-Wide Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Phone__c</fullName>
        <description>The phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__RetainedEarningsGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retained Earnings GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Retained Earnings GLA)</relationshipLabel>
        <relationshipName>DefaultRetainedEarningsGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesTaxCompanyCode__c</fullName>
        <description>The code identifies the company in external tax calculation and reporting systems</description>
        <inlineHelpText>The code identifies the company in external tax calculation and reporting systems</inlineHelpText>
        <label>External Tax Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ShortStreet__c</fullName>
        <label>Short Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__StateProvince__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Street__c</fullName>
        <description>The street</description>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SuspenseGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspense GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Suspense GLA)</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Companies (Tax Code)</relationshipLabel>
        <relationshipName>CompaniesTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxIdentificationNumber__c</fullName>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UseOrgWideExchangeRates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Org-Wide Exchange Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__VATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__VAT_GST_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT/GST Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedCity__c</fullName>
        <label>ValidatedCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedCountry__c</fullName>
        <label>Validated Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedStateProvince__c</fullName>
        <label>Validated State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedStreet__c</fullName>
        <label>ValidatedStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ValidatedZipPostalCode__c</fullName>
        <label>Validated Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Website__c</fullName>
        <description>The website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndMode__c</fullName>
        <label>Year End Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Accounting Code</fullName>
                    <default>true</default>
                    <label>Full Accounting Code</label>
                </value>
                <value>
                    <fullName>GLA Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ZipPostCode__c</fullName>
        <description>The zip or postal code</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplateRemittance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of Conga Template for Remittance</description>
        <inlineHelpText>ID of Conga Template for Remittance</inlineHelpText>
        <label>Remittance</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Companies (Remittance)</relationshipLabel>
        <relationshipName>CompaniesRemittance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplateSalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of Conga Template for Sales Credit Note</description>
        <inlineHelpText>ID of Conga Template for Sales Credit Note</inlineHelpText>
        <label>Sales Credit Note</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Companies (Sales Credit Note)</relationshipLabel>
        <relationshipName>CompaniesSalesCreditNote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplateSalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of Conga Template for Sales Invoice</description>
        <inlineHelpText>ID of Conga Template for Sales Invoice</inlineHelpText>
        <label>Sales Invoice</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Companies (Sales Invoice)</relationshipLabel>
        <relationshipName>CompaniesSalesInvoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__ByOrderofAddressLine1__c</fullName>
        <label>By Order of Address Line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ByOrderofAddressLine2__c</fullName>
        <label>By Order of Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ByOrderofAddressLine3__c</fullName>
        <label>By Order of Address Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CompanyIdentificationNumber__c</fullName>
        <label>Company Identification Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__CompanySpecification__c</fullName>
        <label>Company Specification</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>